Fixed skills and clients on mobile layouts

--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -9,7 +9,11 @@
     padding: $medium;
     background: rgba($white, 0.5);
     border-radius: $radius;
-    grid-column: span 5;
+    grid-column: span 6;
+    
+    @media screen and (min-width: $medium-up) {
+        grid-column: span 5;
+    }
     
     &:nth-child(3n+2) {
         @media screen and (min-width: $large-up) {
